Duplicate items in add node search after adding an asset #102529

Closed
opened 2022-11-15 17:30:59 +01:00 by Alexander · 8 comments

System Information
Operating system: Ubuntu 20.04
Graphics card: Geforce MX230

Blender Version
Broken: 3.4 Beta

Short description of error
If you create a node group in any way, it will be duplicated in the search menu

2022-11-15 19-09-54.mp4

Exact steps for others to reproduce the error
geonodes.zip

  1. Unpack archive, make folder "geonodes" is asset library
  2. Create empty node group, check node search menu (everything will be fine)
  3. Add node group asset from add menu
  4. Check node search menu again, now the error will manifest itself
**System Information** Operating system: Ubuntu 20.04 Graphics card: Geforce MX230 **Blender Version** Broken: 3.4 Beta **Short description of error** If you create a node group in any way, it will be duplicated in the search menu [2022-11-15 19-09-54.mp4](https://archive.blender.org/developer/F13918196/2022-11-15_19-09-54.mp4) **Exact steps for others to reproduce the error** [geonodes.zip](https://archive.blender.org/developer/F13918150/geonodes.zip) 1. Unpack archive, make folder "geonodes" is asset library 2. Create empty node group, check node search menu (everything will be fine) 3. Add node group asset from add menu 4. Check node search menu again, now the error will manifest itself
Author

Added subscriber: @sanek2005

Added subscriber: @sanek2005

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:39:30 +01:00
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:43:29 +01:00
Philipp Oeser added the
Interest
Pipeline, Assets & IO
label 2023-02-10 11:21:26 +01:00

Poke. I noticed one more feature, when creating a node using "false" menu items in the UI of the node, a drop-down list will appear for selecting groups of nodes, this is not observed with the correct menu item. Reproduced in 3.4 and 3.5
Video

Poke. I noticed one more feature, when creating a node using "false" menu items in the UI of the node, a drop-down list will appear for selecting groups of nodes, this is not observed with the correct menu item. Reproduced in 3.4 and 3.5 [Video](https://youtu.be/HdAZxuO5kI0)
Member

That is an expected behavior I think when seeing this commit (bdb5754). In fact, it is duplicated because of the Asset existing, and the node group now added to the current blender file. This makes duplicates, but in a way it is expected.

@HooglyBoogly could take a quick look and confirm (or not)

That is an expected behavior I think when seeing this commit (bdb5754). In fact, it is duplicated because of the Asset existing, and the node group now added to the current blender file. This makes duplicates, but in a way it is expected. @HooglyBoogly could take a quick look and confirm (or not)
Hans Goudey changed title from Node group assets are dublicated in node search menu, if create this node group though node add menu to Duplicate items in add node search after adding an asset 2023-02-15 19:05:31 +01:00
Member

Yeah, this is a bug. The search items are meant to be de-duplicated. There is code to do that already (see if (local_assets.contains(node_group->id.name)) {), but apparently it isn't working.

Yeah, this is a bug. The search items are meant to be de-duplicated. There is code to do that already (see `if (local_assets.contains(node_group->id.name)) {`), but apparently it isn't working.
Hans Goudey added this to the 3.5 milestone 2023-02-15 19:07:18 +01:00
Member

So, what is the behavior expected ? When adding the desired node group, should it be like an asset (no id buttons) or like a regular nodegroup of the file ?

So, what is the behavior expected ? When adding the desired node group, should it be like an asset (no id buttons) or like a regular nodegroup of the file ?
Member

When adding the desired node group, should it be like an asset (no id buttons) or like a regular nodegroup of the file ?

Currently I think the expected behavior is that if there's an asset with that name, only the asset search item should show up in the list.

>When adding the desired node group, should it be like an asset (no id buttons) or like a regular nodegroup of the file ? Currently I think the expected behavior is that if there's an asset with that name, only the asset search item should show up in the list.
Colin Marmond self-assigned this 2023-02-15 19:16:54 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-15 22:13:44 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-07-03 13:03:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102529
No description provided.