Fix #102529: De-duplicate add node search items with assets

Fix a little omission. The id name has a 2 char prefix which has
to be removed in order to compare to the real name.

Pull Request #104793